# egp

./: .env.example  .env.remotecrawl.example  .gitignore  AGENTS.md  CLAUDE.md  TRACKS.md  conftest.py  dev-logs  docker-compose-localdev.yml  docker-compose.monitoring.yml  docker-compose.pg-tunnel.yml  docker-compose.yml  egp_crawler.py  package.json  pyproject.toml  test_egp_crawler.py
apps/api/: AGENTS.md  Dockerfile  Dockerfile.lambda-opn-webhook  pyproject.toml
apps/api/aws/: opn-webhook-lambda-template.yaml
apps/api/src/: main.py
apps/api/src/egp_api/: __init__.py  auth.py  config.py  main.py
apps/api/src/egp_api/bootstrap/: __init__.py  background.py  middleware.py  repositories.py  services.py
apps/api/src/egp_api/executors/: __init__.py  discovery_dispatch.py  discovery_doctor.py  document_backfill_enqueue.py  scheduled_discovery_enqueue.py  webhook_delivery.py
apps/api/src/egp_api/lambda_handlers/: __init__.py  opn_webhook.py  runtime_config.py
apps/api/src/egp_api/routes/: admin.py  auth.py  billing.py  crawler_runtime.py  dashboard.py  documents.py  exports.py  line_integration.py  project_ingest.py  projects.py  rules.py  runs.py  webhooks.py
apps/api/src/egp_api/routes/admin/: __init__.py  audit.py  dependencies.py  overview.py  schemas.py  serializers.py  settings.py  storage.py  support.py
apps/api/src/egp_api/services/: __init__.py  admin_service.py  audit_service.py  auth_service.py  billing_service.py  crawler_runtime_reporter.py  dashboard_service.py  discovery_dispatch.py  discovery_worker_dispatcher.py  document_ingest_service.py  entitlement_service.py  export_service.py  google_drive.py  line_integration.py  line_slip_service.py  onedrive.py  payment_provider.py  project_ingest_service.py  project_service.py  promptpay.py  rules_service.py  run_service.py  run_trigger_mapping.py  storage_credentials.py  storage_settings_service.py  support_service.py  webhook_service.py  webhook_signatures.py
apps/api/tests/: test_browser_isolation.py  test_dispatch_trigger_metadata.py  test_document_backfill_enqueue.py  test_run_trigger_mapping.py  test_scheduled_discovery_enqueue.py
apps/worker/: AGENTS.md  Dockerfile  pyproject.toml
apps/worker/src/: main.py
apps/worker/src/egp_worker/: __init__.py  browser_close_check.py  browser_discovery.py  browser_downloads.py  browser_site_state.py  config.py  json_safety.py  main.py  profiles.py  project_event_sink.py  scheduler.py  warmup.py
apps/worker/src/egp_worker/workflows/: __init__.py  close_check.py  discover.py  document_ingest.py  timeout_sweep.py
coding-logs/: 2026-04-05-16-16-35 Coding Log (task-4-2-webhook-delivery).md  2026-04-05-17-16-40 Coding Log (task-4-3-audit-log).md  2026-04-05-17-45-21 Coding Log (task-4-7-cost-observability-support-tooling).md  2026-04-05-18-46-55 Coding Log (real-user-session-auth).md  2026-04-06-01-03-48 Coding Log (account-lifecycle-auth-hardening).md  2026-04-06-08-46-46 Coding Log (worker-api-project-state-boundary).md  2026-04-06-15-09-01 Coding Log (landing-page-consulting-email-wiring).md  2026-04-06-22-29-44 Coding Log (worker-live-discovery-slice).md  2026-04-07-13-36-34 Coding Log (auth-ambiguity-and-discovery-durability).md  2026-04-07-14-37-06 Coding Log (medium-risk-error-codes-rules-ui-observability).md  2026-04-07-18-30-14 Coding Log (low-risk-rules-and-api-cleanups).md  2026-04-08-12-30-30 Coding Log (subscription-upgrade-phase-a-plan).md  2026-04-11-09-56-34 Coding Log (worker-pagination-robustness).md  2026-04-16-12-41-11 Coding Log (google-drive-provider).md  (+70 more)
(+255 files in other folders)
