[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egp-monorepo"
version = "0.1.0"
description = "e-GP Intelligence Platform shared packages and worker wiring"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "supabase>=2.28",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [
    "apps/api/src",
    "packages/shared-types/src",
    "packages/crawler-core/src",
    "packages/document-classifier/src",
    "packages/db/src",
    "apps/worker/src",
    "packages/notification-core/src",
]
include = [
    "egp_api",
    "egp_api.*",
    "egp_shared_types",
    "egp_shared_types.*",
    "egp_crawler_core",
    "egp_crawler_core.*",
    "egp_document_classifier",
    "egp_document_classifier.*",
    "egp_db",
    "egp_db.*",
    "egp_worker",
    "egp_worker.*",
    "egp_notifications",
    "egp_notifications.*",
]
