[project]
name = "egp-api"
version = "0.1.0"
description = "e-GP Intelligence Platform API Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "boto3>=1.35",
    "supabase>=2.28",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
