[project]
name = "egp-worker"
version = "0.1.0"
description = "e-GP Intelligence Platform Crawler Worker"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "boto3>=1.35",
    "supabase>=2.28",
    "cryptography>=43",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
